@@ -9,15 +9,18 @@ import java.nio.file.Path;
  * JDK11新特性
  * 
  * <pre>
- * 1.Lambda中支持var关键字
+ * 1.Lambda中支持var关键字,主要是为了使用注解,如(@Nullable var a)->System.out.println();
  * 2.可直接在控制台使用java命令运行.java文件,不需要先编译,或者说现在已经自动先编译了
  * 3.字符串添加了一些新方法,如isBlank(),strip()等
  * 4.JDK11正式使用HttpClient,但是包移到了java.net.http中
  * 5.新的垃圾收集器Epsilon:一个处理内存分配但不实现任何实际内存回收机制的GC,一旦堆内存用完,JVM就会退出.试用
- * 6.新的垃圾收集器ZGC:一个可伸缩,低延迟的垃圾回收器,只支持64位系统,试用.
+ * 		试用用法:-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC
+ * 6.新的垃圾收集器ZGC:一个可伸缩,低延迟的垃圾回收器,只支持64位系统,支持TB级内存,试用.
  * 		STW不会超过10ms,既能处理几百兆的小堆,也能处理几个T的堆(OMG),和G1相比,应用吞吐能力不会下降超过15%
+ * 		试用用法:-XX:+UnlockExperimentalVMOptions -XX:+UseZGC
  * 7.基于嵌套的访问控制:如果一个类中嵌套了多个类,各类中可以直接访问彼此的私有成员,为此提供了新的访问机制:Nest
  * 8.更方便的IO
+ * 9.Flight Recorder:原来商业版功能开源,可以导出事件到文件中,之后可以用java mission control分析
  * </pre>
  *
  * @author 飞花梦影
